veigst/build_log_2.txt
WARNING: A restricted method in java.lang.System has been called
WARNING: java.lang.System::load has been called by net.rubygrapefruit.platform.internal.NativeLibraryLoader in an unnamed module (file:/C:/Users/pedro/.gradle/wrapper/dists/gradle-8.13-bin/5xuhj0ry160q40clulazy9h7d/gradle-8.13/lib/native-platform-0.22-milestone-28.jar)
WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
WARNING: Restricted methods will be blocked in a future release unless native access is enabled

> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:generateDebugBuildConfig UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :veigest-sdk:preBuild UP-TO-DATE
> Task :veigest-sdk:preDebugBuild UP-TO-DATE
> Task :veigest-sdk:writeDebugAarMetadata UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :veigest-sdk:processDebugNavigationResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :veigest-sdk:generateDebugResValues UP-TO-DATE
> Task :veigest-sdk:generateDebugResources UP-TO-DATE
> Task :veigest-sdk:packageDebugResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :veigest-sdk:extractDeepLinksDebug UP-TO-DATE
> Task :veigest-sdk:processDebugManifest UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :veigest-sdk:compileDebugLibraryResources UP-TO-DATE
> Task :veigest-sdk:parseDebugLocalResources UP-TO-DATE
> Task :veigest-sdk:generateDebugRFile UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :veigest-sdk:generateDebugBuildConfig UP-TO-DATE
> Task :veigest-sdk:javaPreCompileDebug UP-TO-DATE
> Task :veigest-sdk:compileDebugJavaWithJavac UP-TO-DATE
> Task :veigest-sdk:bundleLibCompileToJarDebug UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
C:\xampp\htdocs\android-app\veigst\app\src\main\java\com\ipleiria\veigest\RoutesFragment.java:111: error: illegal start of expression
    private void setupRecyclerView() {
    ^
1 error

[Incubating] Problems report is available at: file:///C:/xampp/htdocs/android-app/veigst/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\xampp\htdocs\android-app\veigst\app\src\main\java\com\ipleiria\veigest\RoutesFragment.java:111: error: illegal start of expression
      private void setupRecyclerView() {
      ^
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 3s
32 actionable tasks: 1 executed, 31 up-to-date
